--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'
+          php-version: "8.2"
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv
           coverage: none
 
@@ -26,3 +26,25 @@ jobs:
 
       - name: Run tests
         run: php artisan test
+
+      - name: Generate sha
+        id: generate_sha
+        run: |
+          SHA=$(echo $GITHUB_SHA | head -c7)
+          echo "SHA=$SHA" >> $GITHUB_OUTPUT
+
+      - name: Build docker image
+        run: |
+          docker build -t alan01777/semana-nacionalTI:{{ steps.generate_sha.outputs.sha }} -f .docker/docker_images/dockerfile.laravel .
+
+      - name: Log in to container registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push image
+        run: |
+          docker push alan01777/semana-nacionalTI:{{ steps.generate_sha.outputs.sha }}
+          docker tag alan01777/semana-nacionalTI:{{ steps.generate_sha.outputs.sha }} alan01777/semana-nacionalTI:latest
+          docker push alan01777/semana-nacionalTI:latest
