--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,8 +35,7 @@ jobs:
 
       - name: Build docker image
         run: |
-          docker build -t alan01777/semana-nacionalTI:${{ steps.generate_sha.outputs.sha }} -f .docker/docker_images/dockerfile.laravel .
-
+          docker build -t alan01777/semana-nacional-ti:${{ steps.generate_sha.outputs.sha }} -f .docker/docker_images/dockerfile.laravel .
 
       - name: Log in to container registry
         uses: docker/login-action@v3
@@ -46,6 +45,6 @@ jobs:
 
       - name: Push image
         run: |
-          docker push alan01777/semana-nacionalTI:{{ steps.generate_sha.outputs.sha }}
-          docker tag alan01777/semana-nacionalTI:{{ steps.generate_sha.outputs.sha }} alan01777/semana-nacionalTI:latest
-          docker push alan01777/semana-nacionalTI:latest
+          docker push alan01777/semana-alan01777/semana-nacional-ti:$:{{ steps.generate_sha.outputs.sha }}
+          docker tag alan01777/semana-alan01777/semana-nacional-ti:$:{{ steps.generate_sha.outputs.sha }} alan01777/semana-alan01777/semana-nacional-ti:$:latest
+          docker push alan01777/semana-alan01777/semana-nacional-ti:$:latest
