--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,43 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: "8.2"
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv
-          coverage: none
-
-      - name: Run composer install
-        run: composer install -n --prefer-dist
-
-      - name: Prepare Laravel Application
-        run: |
-          cp .env.example .env
-          php artisan key:generate
-
-      - name: Run tests
-        run: php artisan test
-
-      - name: Generate sha
-        id: generate_sha
-        run: |
-          SHA=$(echo $GITHUB_SHA | head -c7)
-          echo "SHA=$SHA" >> $GITHUB_OUTPUT
-
-      - name: Build docker image
-        run: |
-          docker build -t alan01777/semana-nacional-ti:${{ steps.generate_sha.outputs.sha }} -f .docker/docker_images/dockerfile.laravel .
-
-      - name: Log in to container registry
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Push image
-        run: |
-          docker push alan01777/semana-nacional-ti:${{ steps.generate_sha.outputs.sha }}
-          docker tag alan01777/semana-nacional-ti:${{ steps.generate_sha.outputs.sha }} alan01777/semana-nacional-ti:latest
-          docker push alan01777/semana-nacional-ti:latest
+      - uses: .github/workflows/setup-php.yml
+      - uses: .github/workflows/run-tests.yml
+      - uses: .github/workflows/generate-sha.yml
+      - uses: .github/workflows/build-docker-image.yml
+      - uses: .github/workflows/push-image.yml
