--- a/.github/workflows/setup-php.yaml
+++ b/.github/workflows/setup-php.yaml
@@ -1,15 +1,20 @@
 name: Setup PHP
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   setup-php:
     name: Setup PHP
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
