--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,12 +3,11 @@ name: Run tests
 on: [push, pull_request]
 
 jobs:
-  setup:
-    name: Setup environment
+  tests:
+    name: Run tests
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -28,26 +27,16 @@ jobs:
       - name: Run tests
         run: php artisan test
 
-  build-docker:
-    name: Build Docker image
-    runs-on: ubuntu-latest
-    needs: tests
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: Generate sha
         id: generate_sha
-        run: echo "::set-output name=sha::$(echo $GITHUB_SHA | head -c7)"
+        run: |
+          SHA=$(echo $GITHUB_SHA | head -c7)
+          echo "SHA=$SHA" >> $GITHUB_OUTPUT
 
       - name: Build docker image
-        run: docker build -t alan01777/semana-nacional-ti:${{ needs.build-docker.outputs.sha }} -f .docker/docker_images/dockerfile.laravel .
+        run: |
+          docker build -t alan01777/semana-nacional-ti:${{ steps.generate_sha.outputs.sha }} -f .docker/docker_images/dockerfile.laravel .
 
-  push-image:
-    name: Push Docker image
-    runs-on: ubuntu-latest
-    needs: build-docker
-    steps:
       - name: Log in to container registry
         uses: docker/login-action@v3
         with:
@@ -56,6 +45,6 @@ jobs:
 
       - name: Push image
         run: |
-          docker push alan01777/semana-nacional-ti:${{ needs.build-docker.outputs.sha }}
-          docker tag alan01777/semana-nacional-ti:${{ needs.build-docker.outputs.sha }} alan01777/semana-nacional-ti:latest
+          docker push alan01777/semana-nacional-ti:${{ steps.generate_sha.outputs.sha }}
+          docker tag alan01777/semana-nacional-ti:${{ steps.generate_sha.outputs.sha }} alan01777/semana-nacional-ti:latest
           docker push alan01777/semana-nacional-ti:latest
