--- a/.github/workflows/build-push-image.yaml
+++ b/.github/workflows/build-push-image.yaml
@@ -1,31 +1,18 @@
-name: Run tests
+name: Build and push Docker image
 
-on: [push, pull_request]
+on:
+  workflow_run:
+    workflows: ["Run tests"]
+    types:
+      - completed
 
 jobs:
-  tests:
-    name: Run tests
+  Build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: "8.2"
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv
-          coverage: none
-
-      - name: Run composer install
-        run: composer install -n --prefer-dist
-
-      - name: Prepare Laravel Application
-        run: |
-          cp .env.example .env
-          php artisan key:generate
-
-      - name: Run tests
-        run: php artisan test
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Generate sha
         id: generate_sha
