--- a/.github/workflows/build-push-image.yaml
+++ b/.github/workflows/build-push-image.yaml
@@ -7,7 +7,8 @@ on:
       - completed
 
 jobs:
-  Build:
+  Build_and_push_image:
+    name: Build and push image
     runs-on: ubuntu-latest
 
     steps:
