--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,38 +1,28 @@
-name: Build and push Docker image
+name: Run tests
 
-on:
-  workflow_run:
-    workflows: ["Run tests"]
-    types:
-      - completed
+on: [push, pull_request]
 
 jobs:
-  Build_and_push_image:
-    name: Build and push image
+  tests:
+    name: Run tests
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Generate sha
-        id: generate_sha
-        run: |
-          SHA=$(echo $GITHUB_SHA | head -c7)
-          echo "SHA=$SHA" >> $GITHUB_OUTPUT
-
-      - name: Build docker image
-        run: |
-          docker build -t alan01777/semana-nacional-ti:${{ steps.generate_sha.outputs.sha }} -f .docker/docker_images/dockerfile.laravel .
-
-      - name: Log in to container registry
-        uses: docker/login-action@v3
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          php-version: "8.2"
+          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv
+          coverage: none
 
-      - name: Push image
+      - name: Run composer install
+        run: composer install -n --prefer-dist
+
+      - name: Prepare Laravel Application
         run: |
-          docker push alan01777/semana-nacional-ti:${{ steps.generate_sha.outputs.sha }}
-          docker tag alan01777/semana-nacional-ti:${{ steps.generate_sha.outputs.sha }} alan01777/semana-nacional-ti:latest
-          docker push alan01777/semana-nacional-ti:latest
+          cp .env.example .env
+          php artisan key:generate
+
+      - name: Run tests
+        run: php artisan test
