--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,20 +3,20 @@ name: Run tests
 on: [push, pull_request]
 
 jobs:
-  tests:
+  Build:
     name: Run tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup PHP
+      - name: Build PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.2"
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv
           coverage: none
 
-      - name: Run composer install
+      - name: Install dependencies
         run: composer install -n --prefer-dist
 
       - name: Prepare Laravel Application
