--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,8 +1,8 @@
-name: Build and push Docker image
+name: deployment
 
 on:
   workflow_run:
-    workflows: ["Run tests"]
+    workflows: ["build"]
     types:
       - completed
 
